--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@types/styled-components-react-native": "^5.2.1",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-web": "~0.18.10",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/runtime": "^7.21.0",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.71.5",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^4.9.4"
   },
   "private": true
