--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,19 @@
 {
-  "extends": "expo/tsconfig.base",
-  "compilerOptions": {
-    "strict": true
-  }
+	"compilerOptions": {
+		"allowJs": true,
+		"esModuleInterop": true,
+		"baseUrl": ".",
+		"forceConsistentCasingInFileNames": true,
+		"jsx": "preserve",
+		"noEmit": true,
+		"strict": false,
+		"target": "ES6",
+		"paths": {
+			"@components/*": ["components/*"],
+			"@screens/*": ["screens/*"],
+			"@styles/*": ["styles/*"],
+			"@assets/*": ["assets/*"]
+		}
+	},
+	"extends": "expo/tsconfig.base"
 }
