--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/styled-components-react-native": "^5.2.1",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
@@ -18,6 +20,8 @@
     "react-native": "0.71.6",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
