--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "3.7.16",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-masked-view/masked-view": "0.2.8",
@@ -20,10 +21,12 @@
     "@types/styled-components-react-native": "^5.2.1",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
+    "graphql": "15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-render-html": "6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
