--- a/package.json
+++ b/package.json
@@ -11,26 +11,28 @@
   "dependencies": {
     "@apollo/client": "3.7.16",
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-masked-view/masked-view": "0.2.8",
+    "@expo/webpack-config": "0.12.52",
+    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-native": "0.72.2",
     "@types/styled-components-react-native": "^5.2.1",
-    "expo": "~48.0.10",
-    "expo-status-bar": "~1.4.4",
+    "expo": "49.0.2",
+    "expo-status-bar": "~1.6.0",
     "graphql": "15.8.0",
     "moment": "2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native": "0.72.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-render-html": "6.3.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.10",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "styled-components": "^5.3.9"
@@ -38,11 +40,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/runtime": "^7.21.0",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "^0.71.5",
+    "@types/react": "~18.2.14",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-module-resolver": "^5.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
