--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
 	"compilerOptions": {
+		"typeRoots": [
+			"node_modules/@types",
+			"helpers"
+		],
 		"allowJs": true,
 		"esModuleInterop": true,
 		"baseUrl": ".",
