--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-native": "0.72.2",
     "@types/styled-components-react-native": "^5.2.1",
     "expo": "49.0.2",
+    "expo-linear-gradient": "12.3.0",
     "expo-status-bar": "~1.6.0",
     "graphql": "15.8.0",
     "moment": "2.29.4",
