--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "expo-blur": "~12.4.1",
     "expo-linear-gradient": "12.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "10.1.0",
     "graphql": "15.8.0",
+    "lottie-react-native": "5.1.6",
     "moment": "2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
