--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "3.7.16",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "0.12.52",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
