--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@apollo/client": "3.7.16",
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "0.12.52",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -31,7 +31,7 @@
     "moment": "2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-render-html": "6.3.4",
     "react-native-safe-area-context": "4.6.3",
